# bazel-ts-repo

./: .bazel.rc  .gitignore  WORKSPACE.bazel  package.json
ts-and-json-mix/: BUILD.bazel  tsconfig.json
ts-and-json-mix/src/: file.json  index.ts
